Text wrap bug

--- a/frontend/src/styles/testimony.scss
+++ b/frontend/src/styles/testimony.scss
@@ -288,6 +288,7 @@ nav {
     font-weight: 700;
     position: relative;
     z-index: -1;
+    overflow-wrap: break-word;
     @media all and (max-width: 600px) {
       height: 120px;
     }
